# statistics_helper

./: CMakeLists.txt  main.cpp
include/: binomial.h  enums.h  inputvalidator.h  stdafx.h
src/: binomial.cpp  decls.cpp  main.cpp
